Updating styles, adding more animations

--- a/app/index.html
+++ b/app/index.html
@@ -35,19 +35,19 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p>Design infused Front-end Developer with a focus on aesthetics and usability</p>
+                      <h1 id="title-credit">Erik Nilsson</h1>
           </div>
           <div class="col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <h1 id="name-title">Erik Nilsson</h1>
+                      <p id="about-credit">I'm Digital Designer turned Front-end Developer that likes hiding the cody bits behind spinny bits.</p>
           </div>
           <div class="col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p>Find me on github, linked or just drop me a line at newemial@comingsoon.com</p>
+                      <p id="contact-credit">Find me on github, linked or just drop me a line at newemial@comingsoon.com</p>
           </div>
       </div>
 
