Adding basketball animation and switch case to keep track of easter eggs

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,9 @@
                   <img src="img/black-circle.svg"/>
                 </div>
                 <img id="circle-shadow" src="img/circle-shadow.svg" style="transform: translateY(-50%) translateX(-50%);"/>
+                <div id="basketball" style="transform: translateY(104%); bottom: 1%;">
+                  <img id="basketball-lines" src="img/basketball.svg"/>
+                </div>
                 <img id="pop-up-mask" src="img/pop-up-mask.svg" style="transform: translateY(-50%) translateX(-50%);"/>
               </div>
           </div>
@@ -41,7 +44,7 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="about-credit">I'm Digital Designer turned Front-end Developer that likes hiding the cody bits behind spinny bits.</p>
+                      <p id="about-credit">I'm Digital Designer turned Front-end Developer at Tactel that likes hiding the cody bits behind spinny bits.</p>
           </div>
           <div class="col-xs-12
                       col-sm-4
