--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,12 @@
                       col-lg-12">
               <div class="screen-frame">
                 <svg id="tractor-beam" width="20%" height="60%" viewBox="0 0 113 232" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="opacity: 0;">
-                    <g id="Page-1" stroke="none" fill="none" fill-rule="evenodd">
-                        <path d="M0.0317009116,217.571777 C-0.359900651,227.125163 2.87659023,231.901855 9.74117357,231.901855 C16.6057569,231.901855 22.8144282,231.704753 28.3671875,231.310547 C29.6152095,231.704753 33.7948845,231.901855 40.9062126,231.901855 C48.0175408,231.901855 53.4719803,231.626628 57.2695312,231.076172 C58.2857824,231.626628 62.4402296,231.901855 69.7328728,231.901855 C77.025516,231.901855 81.8469803,231.86556 84.1972656,231.792969 C85.5732173,231.86556 90.5434197,231.901855 99.1078728,231.901855 C107.672326,231.901855 112.044396,226.752279 112.224084,216.453125 L56.1278923,0 L0.0317009116,217.571777 Z" id="Path-2" fill="#74F9FD"></path>
-                    </g>
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <g>
+                          <path d="M0.598070895,203.799953 L56,0 L111.401929,203.799953 C111.79594,204.518016 112,205.252625 112,206 C112,214.284271 86.927946,221 56,221 C25.072054,221 0,214.284271 0,206 C0,205.252625 0.204060215,204.518016 0.598070895,203.799953 Z" id="Combined-Shape" fill="#74F9FD"></path>
+                          <ellipse id="Oval-Copy-11" fill="#B7FDFF" cx="56" cy="206" rx="56" ry="15"></ellipse>
+                      </g>
+                  </g>
                 </svg>
                 <div id="spotlight" style="transform: translateY(-50%) translateX(-50%);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
