Adding record animation

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="body-container">
       <div class="screen row">
-          <div class="col-xs-12
+          <div class="screen col-xs-12
                       col-sm-12
                       col-md-12
                       col-lg-12">
@@ -29,6 +29,11 @@
                       </g>
                   </g>
                 </svg>
+                <div id="record">
+                  <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
+                  <img id="record-pin" src="img/record-pin.svg" style="opacity: 0;"/>
+                  <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);"/>
+                </div>
                 <div id="spotlight" style="transform: translateY(-50%) translateX(-50%);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
                   <img id="circle-shadow" src="img/circle-shadow.svg"  />
