--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,13 @@
                   </g>
                 </svg>
                 <div id="record">
+                  <!-- <img id="record-lines" src="img/record-lines.svg" style="transform: scale(1); opacity: 0;" /> -->
                   <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
+                  <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(60deg); opacity: 0;" />
                   <img id="record-pin" src="img/record-pin.svg" style="opacity: 0;"/>
                   <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);"/>
+                  <img id="speaker-off" src="img/speaker-off.svg" />
+                  <img id="speaker-on" src="img/speaker.svg" />
                 </div>
                 <div id="spotlight" style="transform: translateY(-50%) translateX(-50%);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
@@ -41,7 +45,7 @@
                 <div id="loading-circle" style="transform: translateY(-50%) translateX(-50%);">
                   <img src="img/black-circle.svg"/>
                 </div>
-                <div id="basketball" style="transform: translateY(104%); bottom: 1%;">
+                <div id="basketball" style="transform: translateY(104%); bottom: 0%;">
                   <img id="basketball-lines" src="img/basketball.svg"/>
                 </div>
                 <img id="pop-up-mask" src="img/pop-up-mask.svg" style="transform: translateY(-50%) translateX(-50%);"/>
@@ -77,6 +81,6 @@
     <!-- Additional Javascript -->
     <script src="js/main.js"></script>
     <!-- <script src="js/twofactor.js"></script> -->
-    <script src="js/spotlight.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 </html>
