Starting egg animation

--- a/app/index.html
+++ b/app/index.html
@@ -30,13 +30,16 @@
                   </g>
                 </svg>
                 <div id="record">
-                  <!-- <img id="record-lines" src="img/record-lines.svg" style="transform: scale(1); opacity: 0;" /> -->
                   <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
                   <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(60deg); opacity: 0;" />
-                  <img id="record-pin" src="img/record-pin.svg" style="opacity: 0;"/>
+                  <img id="record-pin" src="img/record-pin.svg" style="opacity: 0; transform: scaleX(1);"/>
                   <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);"/>
                   <img id="speaker-off" src="img/speaker-off.svg" />
                   <img id="speaker-on" src="img/speaker.svg" />
+                </div>
+                <div id="fried-egg">
+                  <img id="egg-white" src="img/egg-white.svg" style="transform: scaleX(0.5) scaleY(0.6); opacity: 0;" />
+                  <img id="yolk" src="img/yolk.svg" style="transform: scaleX(0.7); opacity: 0;" />
                 </div>
                 <div id="spotlight" style="transform: translateY(-50%) translateX(-50%);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
@@ -57,13 +60,13 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <h1 id="title-credit">Erik Nilsson</h1>
+                      <h1 id="title-credit">Anime.js</h1>
           </div>
           <div class="col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="about-credit">I'm Digital Designer turned Front-end Developer at Tactel that likes hiding the cody bits behind spinny bits.</p>
+                      <p id="about-credit">Lorem ipsum dolor ti the dude abides, I fucking hate the eagesl, man.</p>
           </div>
           <div class="col-xs-12
                       col-sm-4
