Adding dartboard animation

--- a/app/index.html
+++ b/app/index.html
@@ -37,19 +37,21 @@
                   <img id="speaker-off" src="img/speaker-off.svg" />
                   <img id="speaker-on" src="img/speaker.svg" />
                 </div>
-                <div id="fried-egg">
-                  <img id="egg-white" src="img/egg-white.svg" style="transform: scaleX(0.5) scaleY(0.6); opacity: 0;" />
-                  <img id="yolk" src="img/yolk.svg" style="transform: scaleX(0.7); opacity: 0;" />
-                </div>
-                <div id="spotlight" style="transform: translateY(-50%) translateX(-50%);">
+                <div id="spotlight" style="transform: translateY(-50%) translateX(-50%) scaleY(1) scaleX(1);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
                   <img id="circle-shadow" src="img/circle-shadow.svg"  />
+                  <img id="dart-board" src="img/dartboard.svg" style="opacity: 0;" />
                 </div>
                 <div id="loading-circle" style="transform: translateY(-50%) translateX(-50%);">
                   <img src="img/black-circle.svg"/>
                 </div>
                 <div id="basketball" style="transform: translateY(104%); bottom: 0%;">
                   <img id="basketball-lines" src="img/basketball.svg"/>
+                </div>
+                <div id="darts">
+                  <img class="dart" id="dart-1" src="img/dart.svg" />
+                  <img class="dart" id="dart-2" src="img/dart.svg" />
+                  <img class="dart" id="dart-3" src="img/dart.svg" />
                 </div>
                 <img id="pop-up-mask" src="img/pop-up-mask.svg" style="transform: translateY(-50%) translateX(-50%);"/>
               </div>
