Starting flashlight animation

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
                 <svg id="tractor-beam" width="20%" height="60%" viewBox="0 0 113 232" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="opacity: 0;">
                   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                       <g>
-                          <path d="M0.598070895,203.799953 L56,0 L111.401929,203.799953 C111.79594,204.518016 112,205.252625 112,206 C112,214.284271 86.927946,221 56,221 C25.072054,221 0,214.284271 0,206 C0,205.252625 0.204060215,204.518016 0.598070895,203.799953 Z" id="Combined-Shape" fill="#74F9FD"></path>
-                          <ellipse id="Oval-Copy-11" fill="#B7FDFF" cx="56" cy="206" rx="56" ry="15"></ellipse>
+                          <path d="M0.598070895,203.799953 L56,0 L111.401929,203.799953 C111.79594,204.518016 112,205.252625 112,206 C112,214.284271 86.927946,221 56,221 C25.072054,221 0,214.284271 0,206 C0,205.252625 0.204060215,204.518016 0.598070895,203.799953 Z" id="Combined-Shape" fill="#438AFE"></path>
+                          <ellipse id="Oval-Copy-11" fill="#E3FFFE" cx="56" cy="206" rx="56" ry="15"></ellipse>
                       </g>
                   </g>
                 </svg>
@@ -88,6 +88,11 @@
                           </g>
                       </g>
                   </svg>
+                </div>
+                <div id="flashlight-holder" style="transform: rotate(0);">
+                  <img id="flashlight" src="img/flashlight.svg" />
+                  <img id="flashlight-beam" src="img/flashlight-beam.svg" />
+                  <img id="flashlight-mask" src="img/flashlight-mask.svg" />
                 </div>
                 <img id="pop-up-mask" src="img/pop-up-mask.svg" style="transform: translateY(-50%) translateX(-50%);"/>
               </div>
