Adding mouse animation

--- a/app/index.html
+++ b/app/index.html
@@ -91,9 +91,11 @@
                 </div>
                 <div id="flashlight-holder" style="transform: rotate(0);">
                   <img id="flashlight" src="img/flashlight.svg" />
+                  <img id="flashlight-button" src="img/flashlight-button.svg" />
                   <img id="flashlight-beam" src="img/flashlight-beam.svg" />
                   <img id="flashlight-mask" src="img/flashlight-mask.svg" />
                 </div>
+                <img id="mouse" src="img/mouse.svg" style="transform: skewY(0deg) rotate(0deg);">
                 <img id="pop-up-mask" src="img/pop-up-mask.svg" style="transform: translateY(-50%) translateX(-50%);"/>
               </div>
           </div>
