updating gulpfile and rearranging folder structure

--- a/app/index.html
+++ b/app/index.html
@@ -105,13 +105,13 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <h1 id="title-credit">Anime.js</h1>
+                      <h1 id="title-credit">Erik Nilsson</h1>
           </div>
           <div class="col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="about-credit">Lorem ipsum dolor ti the dude abides, I fucking hate the eagesl, man.</p>
+                      <p id="about-credit">I'm Digital Designer turned Front-end Developer at Tactel that likes hiding the cody bits behind spinny bits.</p>
           </div>
           <div class="col-xs-12
                       col-sm-4
@@ -123,8 +123,8 @@
 
     </div>
     <!-- JS Libs -->
-    <script src="js/jquery.js"></script>
-    <script src="js/anime.js"></script>
+    <script src="lib/jquery.js"></script>
+    <script src="lib/anime.js"></script>
 
     <!-- Additional Javascript -->
     <script src="js/main.js"></script>
