--- a/app/index.html
+++ b/app/index.html
@@ -21,14 +21,7 @@
                       col-md-12
                       col-lg-12">
               <div class="screen-frame">
-                <svg id="tractor-beam" width="20%" height="60%" viewBox="0 0 113 232" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="opacity: 0;">
-                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g>
-                          <path d="M0.598070895,203.799953 L56,0 L111.401929,203.799953 C111.79594,204.518016 112,205.252625 112,206 C112,214.284271 86.927946,221 56,221 C25.072054,221 0,214.284271 0,206 C0,205.252625 0.204060215,204.518016 0.598070895,203.799953 Z" id="Combined-Shape" fill="#438AFE"></path>
-                          <ellipse id="Oval-Copy-11" fill="#E3FFFE" cx="56" cy="206" rx="56" ry="15"></ellipse>
-                      </g>
-                  </g>
-                </svg>
+                <img id="tractor-beam" src="img/tractor-beam.svg" >
                 <div id="record">
                   <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
                   <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(60deg); opacity: 0;" />
