Updating UFO animation

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,9 @@
                       col-md-12
                       col-lg-12">
               <div class="screen-frame">
-                <img id="tractor-beam" src="img/tractor-beam.svg" >
+
+                <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
+                <img id="abductee" src="img/madmen.svg" />
                 <div id="record">
                   <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
                   <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(60deg); opacity: 0;" />
