Adding time animation and reworking order

--- a/app/index.html
+++ b/app/index.html
@@ -26,14 +26,20 @@
                 <img id="abductee" src="img/madmen.svg" />
                 <div id="record">
                   <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
-                  <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(60deg); opacity: 0;" />
+                  <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
                   <img id="record-pin" src="img/record-pin.svg" style="opacity: 0; transform: scaleX(1);"/>
                   <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);"/>
                   <img id="speaker-off" src="img/speaker-off.svg" />
                   <img id="speaker-on" src="img/speaker.svg" />
                 </div>
+                <!-- <div id="egg">
+                  <img id="egg-white" src="img/egg-white.svg" />
+                  <img id="egg-yolk" src="img/yolk.svg" />
+                </egg> -->
                 <div id="spotlight" style="transform: translateY(-50%) translateX(-50%) scaleY(1) scaleX(1);">
                   <img id="spotlight-svg" src="img/white-circle.svg" />
+                  <img id="hour-hand" src="img/hour-hand.svg">
+                  <img id="minute-hand" src="img/minute-hand.svg">
                   <img id="circle-shadow" src="img/circle-shadow.svg"  />
                   <img id="dart-board" src="img/dartboard.svg" style="opacity: 0;" />
                 </div>
