--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="contact-credit">Find me on github, linked or just drop me a line at newemial@comingsoon.com</p>
+                      <p id="contact-credit">golf ball by Anthony Hamill from the Noun Project Find me on github, linked or just drop me a line at newemial@comingsoon.com</p>
           </div>
       </div>
 
