--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
                       col-md-12
                       col-lg-12">
               <div class="screen-frame">
-
+                <img id="ufo" src="img/ufo.svg" />
                 <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
                 <img id="abductee" src="img/madmen.svg" />
                 <div id="record">
