Trying to fix audio playback issue

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
                   <img id="speaker-off" src="img/speaker-off.svg" />
                   <img id="speaker-on" src="img/speaker.svg" />
                 </div>
+                <audio id="gibbo"></audio>
                 <!-- <div id="egg">
                   <img id="egg-white" src="img/egg-white.svg" />
                   <img id="egg-yolk" src="img/yolk.svg" />
@@ -110,13 +111,34 @@
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="about-credit">I'm Digital Designer turned Front-end Developer at Tactel that likes hiding the cody bits behind spinny bits.</p>
+                      <p id="about-credit">Currently a Frontend Development Engineer at Tactel in Malmö, Sweden.</p>
           </div>
           <div class="col-xs-12
                       col-sm-4
                       col-md-4
                       col-lg-4">
-                      <p id="contact-credit">Find me on github, linked or just drop me a line at newemial@comingsoon.com</p>
+                      <p id="contact-credit">Formerly a digital designer who was abuducted into the realm of software development.</p>
+          </div>
+          <div class="col-xs-12
+                      col-sm-4
+                      col-md-4
+                      col-lg-4">
+                      <p id="record-credit">A record of my experience can be found at <a href="#">LinkedIn</a> or GitHub</p>
+          </div>
+      </div>
+      <div class="credits row">
+
+          <div class="col-xs-12
+                      col-sm-4
+                      col-md-4
+                      col-lg-4">
+                      <p id="about-credit"></p>
+          </div>
+          <div class="col-xs-12
+                      col-sm-4
+                      col-md-4
+                      col-lg-4">
+                      <p id="contact-credit"></p>
           </div>
       </div>
 
