Fixing audio and reworking clock math

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,10 @@
                   <img id="speaker-off" src="img/speaker-off.svg" />
                   <img id="speaker-on" src="img/speaker.svg" />
                 </div>
-                <audio id="gibbo"></audio>
+                <audio id="gibbo">
+                  <source src="../audio/Gibbo-StDenisBeatTape.ogg" type="audio/ogg">
+                  <source src="../audio/Gibbo-StDenisBeatTape.mp3" type="audio/mpeg">
+                </audio>
                 <!-- <div id="egg">
                   <img id="egg-white" src="img/egg-white.svg" />
                   <img id="egg-yolk" src="img/yolk.svg" />
