Updating UFO, fixing transition between record and spotlight, ditching flashlight

--- a/app/index.html
+++ b/app/index.html
@@ -29,14 +29,23 @@
           <img id="ufo" src="img/ufo.svg" />
           <img id="tractor-beam" src="img/tractor-beam.svg" style="transform: scaleX(0);" />
           <img id="abductee" src="img/madmen.svg" />
+          <div id="spotlight-holder">
+            <!-- <div id="spotlight-holder" style="transform: translateX(-44.4%);"> -->
+            <img id="spotlight" src="img/spotlight.svg" />
+            <img id="spotlight-base" src="img/spotlight-base.svg" />
+            <!-- <img id="spotlight-glass" src="img/spotlight-glass.svg" /> -->
+          </div>
+          <img id="spotlight-lever" src="img/spotlight-lever.svg" />
           <div id="record">
             <img id="record-lines" src="img/record-lines.svg" style="transform: scale(0.4); opacity: 0;" />
             <img id="record-shine" src="img/record-shine.svg" style="transform: rotateZ(0deg);" />
-            <img id="record-pin" src="img/record-pin.svg" style="opacity: 0; transform: scaleX(1);" />
-            <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);" />
+            <img id="spotlight-glass" src="img/spotlight-glass.svg" />
+
             <img id="speaker-off" src="img/speaker-off.svg" />
             <img id="speaker-on" src="img/speaker.svg" />
           </div>
+          <img id="record-pin" src="img/record-pin.svg" style="opacity: 0; transform: scaleX(1);" />
+          <img id="record-needle" src="img/record-needle.svg" style="transform: rotate(18deg) skewX(65deg);" />
           <div id="white-circle" style="transform: translateY(-50%) translateX(-50%) scaleY(1) scaleX(1);">
             <img id="white-circle-svg" src="img/white-circle.svg" />
             <img id="hour-hand" src="img/hour-hand.svg">
@@ -98,13 +107,6 @@
             <img id="flashlight-mask-right" src="img/flashlight-mask-right.svg" />
             <img id="flashlight-mask-left" src="img/flashlight-mask-left.svg" />
           </div>
-          <div id="spotlight-holder">
-            <!-- <div id="spotlight-holder" style="transform: translateX(-44.4%);"> -->
-            <img id="spotlight" src="img/spotlight.svg" />
-            <img id="spotlight-base" src="img/spotlight-base.svg" />
-            <img id="spotlight-glass" src="img/spotlight-glass.svg" />
-          </div>
-          <img id="spotlight-lever" src="img/spotlight-lever.svg" />
           <img id="pop-up-mask" src="img/pop-up-mask.svg" />
         </div>
       </div>
